--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>STATED.</title>
+    <title>KURRUF.</title>
 
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="styles.css" type="text/css" rel="Stylesheet" />
@@ -331,14 +331,14 @@
                 <div id="address-container">
                     <label>Direccion</label>
                     <address>
-                        20377 Las cabañas Matanza, Chile, CL 
+                         Las cabañas 20377, Matanza, Chile, CL 
                     </address>
 
                     <label>Telefono</label>
                     <a href="#">+56 X XXXX XXX</a>
 
                     <label>Direccion de correo electronico</label>
-                    <a href="#">contacto@kuyed.cl</a>
+                    <a href="#">contacto@kurruf.cl</a>
                 </div>
             </div>
         </div>
@@ -347,7 +347,7 @@
     <footer>
         <div class="flex container">
             <div class="footer-about">
-                <h5>@ 2021 KUYED.</h5>
+                <h5>@ 2021 KURRUF.</h5>
                 <p>Las imágenes y textos contenidos en este sitio web son meramente ilustrativos y referenciales, por lo que podrían no representar la realidad. La empresa se reserva la facultad de efectuar cambios en los proyectos. Los precios estan sujetos a disponibilidad de los productos. Exija su cotización en las salas y puntos de ventas.</p>
             </div>
 
