--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
                     <ul id="nav-menu">
                         <li><a href="#" class="active">Home</a></li>
-                        <li><a href="#" target="_blank">Nosotros</a></li>
-                        <li><a href="#">Mision/Vision</a></li>
-                        <li><a href="#">Proyectos</a></li>
-                        <li><a href="#">Colaboradores</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="#how-it-works">Nosotros</a></li>
+                        <li><a href="#the-best">Mision/Vision</a></li>
+                        <li><a href="#properties">Proyectos</a></li>
+                        <li><a href="#agents">Colaboradores</a></li>
+                        <li><a href="#contact">Contacto</a></li>
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
                 </nav>
@@ -354,17 +354,17 @@
             <div class="footer-quick-links">
                 <h5>Enlaces relevantes</h5>
                 <ul>
-                    <li><a href="#">Sobre nosotros</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Testimonios</a></li>
-                    <li><a href="#">Contactanos</a></li>
+                    <li><a href="#how-it-works">Sobre nosotros</a></li>
+                    <li><a href="#properties">Servicios</a></li>
+                    <li><a href="#testimonials">Testimonios</a></li>
+                    <li><a href="#contact">Contactanos</a></li>
                 </ul>
             </div>
 
             <div class="footer-subscribe">
                 <h5>Subscribete a nuestro blog</h5>
                 <div id="subscribe-container">
-                    <input type="text" placeholder="Enter Email" />
+                    <input type="text" placeholder="Escribe tu email" />
                     <button class="right-rounded">Enviar</button>
                 </div>
 
@@ -379,7 +379,7 @@
         </div>
 
         <small>
-            Copyright &copy; 2021 All rights reserved | Este sitio esta hecha con <span class="fa fa-heart"></span> por <a href="https://colorlib.com">PROGRAMAS DEL SUR</a>
+            Copyright &copy; 2021 All rights reserved | Este sitio esta hecha con <span class="fa fa-heart"></span> por PROGRAMAS DEL SUR
         </small>
     </footer>
 
